# toss-portfolio-lens

./: .dockerignore  .env.chatgpt.example  .env.example  .gitignore  Dockerfile  Dockerfile.worker  Dockerfile.worker.ai  Dockerfile.worker.rust  README.md  compose.ai-gpu.yaml  compose.ai-remote-main.yaml  compose.ai-remote-worker.yaml  compose.chatgpt.yaml  compose.yaml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.server.json  tsconfig.tools.json  vite.config.ts
docs/: mcp-chatgpt.md  scalping-ai-worker.md  spark-agent-efficiency-report.html
kiro-workspace/: AGENTS.md  README.md
scripts/: benchmark-compute.ts  benchmark-optimization-load.ts  benchmark-python-worker.ts  benchmark-rust-ipc.ts  capture-readme-showcase.mjs  capture-readme.mjs  configure-cnpg-production.mjs  generate-mcp-docs.ts  generate-mcp-oauth-secrets.mjs  mcp-browser-smoke.mjs  mcp-oauth-http-smoke.mjs  prepare-ai-model-cache.py  verification-config.ts  verify-ai-simulation-live.mjs  verify-ai-simulation-ui.mjs  verify-ai-websocket-roundtrip.ts  verify-aws-report.mjs  verify-aws-ui.mjs  verify-backtest-parity.ts  verify-kis-us-realtime.ts  verify-kis-us-rest.ts  verify-mysql-storage.ts  verify-postgres-storage.ts  (+9 more)
worker/ai/: README.md  THIRD_PARTY_NOTICES.md  model-manifest.json  pyproject.toml
worker/ai/src/portfolio_ai_worker/: __init__.py  adapters.py  contracts.py  evaluation.py  main.py  postprocess.py  server.py  service.py  settings.py  transport.py
worker/ai/tests/: helpers.py  test_adapters.py  test_contract_fixture_parity.py  test_contracts.py  test_evaluation.py  test_postprocess.py  test_server.py  test_service.py  test_transport.py
worker/python/: pyproject.toml
worker/python/src/portfolio_worker/: __init__.py  backtest_analytics.py  backtest_engine.py  compute.py  contracts.py  main.py  optimization.py  repository.py  settings.py
worker/python/tests/: test_backtest_analytics.py  test_contracts.py  test_optimization.py  test_settings.py
worker/rust/: Cargo.toml
worker/rust/src/: analytics.rs  backtest.rs  batch.rs  compute.rs  contracts.rs  control.rs  date.rs  indicators.rs  lib.rs  main.rs  model.rs  monte_carlo.rs  optimization.rs  portfolio_math.rs  repository.rs  scalping.rs  stats.rs  technical_strategy.rs
worker/rust/src/optimization/: algorithms.rs  baseline.rs  config.rs  constraints.rs  frame.rs  input.rs  ledger.rs  pareto.rs  regime_policy.rs  rng.rs
(+369 files in other folders)
