[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "toss-portfolio-lens-ai-worker"
version = "0.1.0"
description = "Offline, versioned intraday forecasting worker for Toss Portfolio Lens"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pydantic==2.11.7",
  "websockets==15.0.1",
]

[project.optional-dependencies]
model = [
  "chronos-forecasting==2.1.0",
  "einops==0.8.1",
  "huggingface-hub==0.33.1",
  "numpy==2.2.6",
  "pandas==2.2.3",
  "safetensors==0.6.2",
  "torch==2.6.0",
]
dev = [
  "pytest==8.4.2",
]

[project.scripts]
portfolio-ai-worker = "portfolio_ai_worker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_ai_worker"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
