[package]
name = "portfolio-lens-compute"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"

[lib]
name = "portfolio_lens_compute"
path = "src/lib.rs"

[[bin]]
name = "portfolio-lens-worker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
flate2 = "1.1.5"
hex = "0.4.3"
libc = "0.2.177"
postgres = { version = "0.19.12", features = ["with-serde_json-1"] }
native-tls = "0.2.14"
postgres-native-tls = "0.5.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
uuid = { version = "1.18.1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"

[dev-dependencies]
approx = "0.5.1"
